# tunevault

./: .gitignore  ARCHITECTURE_RULES.md  CLAUDE.md  README.md  RELEASES.md  SECURITY.md  add-wf-col.js  check-emdash.js  check-lines.js  check-report.js  check-structure.js  crypto-utils.js  debug-nav.js  debug-oacore.js  debug-tunebot.js  demo-data.js  ebs-recommendations.js  extract-js.js  fix-all.js  fix-buttons.js  fix-cm-opp.js  fix-cm.js  fix-formatnum.js  fix-loadreport.js  fix-pdf.js  fix-report.js  fix-sections.js  install.sh  oracle-client.js  oracle-proxy.js  oracle-proxy.py  package-lock.json  package.json  pdf-generator-ebs.js  pdf-generator.js  playwright.config.ts  pyproject.toml  render.yaml  server.js  tag-release.sh  (+7 more)
agent/: __init__.py  bootstrap.py  cli.py  db.py  oracle_worker.py  poll.py  probes.py  release.json  ssh.py
config/: finding_weights.json  pricing.js
data/: oracle-patches.json
db/: activity-log.js  addm-runs.js  admin-agents.js  advisor-findings.js  agent-command-queue.js  agent-command-results.js  agent-diagnose.js  agent-install-failures.js  agent-restart-events.js  agent-upgrade-audit.js  agent.js  alert-policies.js  analytics.js  api-keys.js  blog.js  clone-recipes.js  compliance-reports.js  connection-health.js  ebs-adop-state.js  ebs-control.js  ebs-credentials.js  ebs-deep-reports.js  ebs-deep.js  ebs-jobs.js  ebs-runbooks.js  email-drip.js  email-log.js  failure-bundles.js  first-run.js  fleet.js  fndload.js  index.js  install-jobs.js  installer-smoke.js  installer-validation.js  listener-preflight.js  manager.js  mfa.js  outreach-lock.js  outreach.js  (+25 more)
docs/: ARCHITECTURE_RULES.md  ROADMAP-AGENCY-MODE.md  agent.md  architecture.md  audit-2026-05-11.md  ci-required-checks.md  deploy-log.md  rollback.md  security-threat-model.md
lib/: polsia-ai.js
middleware/: api-auth.js  auth.js  security.js  tier-enforce.js
proxy/: PROXY_SCHEMA.md
(+326 files in other folders)
